--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,11 @@ export(bs_loc_stat)
 export(bs_plot)
 export(bs_scale_stat)
 export(bs_summarize)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme_classic)
+importFrom(gridExtra,grid.arrange)
 importFrom(gridExtra,tableGrob)
 importFrom(magrittr,"%>%")
